JumpScript/tests/baselines/reference/classExtendsEveryObjectType2.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.jump(1,18): error TS2507: Type '{ foo: any; }' is not a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.jump(1,25): error TS2693: 'string' only refers to a type, but is being used as a value here.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.jump(1,31): error TS1005: ',' expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.jump(3,18): error TS2507: Type 'undefined[]' is not a constructor function type.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.jump (4 errors) ====
    class C2 extends { foo: string; } { } // error
                     ~~~~~~~~~~~~~~~~
!!! error TS2507: Type '{ foo: any; }' is not a constructor function type.
                            ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
                                  ~
!!! error TS1005: ',' expected.
    
    class C6 extends []{ } // error
                     ~~
!!! error TS2507: Type 'undefined[]' is not a constructor function type.